--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -192,63 +192,136 @@
                 <p>The second section fully reveals the promise found in Romans Chapter 8. This passage comes alive through contemporary dance, reflecting God's powerful voice and presence washing over us like water. It speaks to the Holy Spirit's supernatural power, interceding for us, bringing ultimate victory over life and death, and offering abundant life and hope to those who put their faith in Jesus.</p>
                 <p>I invite you to experience God's presence and be encouraged. Know that you are uniquely called to His purposes, and the Holy Spirit empowers you to walk in healing and victory. As Romans 8:37-38 (TPT) says: "Yet even in the midst of all all these things, we triumph over them all, for God has made us to be more than conquerors, and his demonstrated love is our glorious victory over everything. So now I live with the confidence that there is nothing in the universe with the power to separate us from God's love. I'm convinced that his love will triumph over death, life's troubles, fallen angels, or dark rulers in the heavens. There is nothing in our present or future circumstances that can weaken his love."</p>
                 <br>
-                <div class="row" style="display: flex; align-items: center;">
-                    <div class="col-md-3" style="text-align: center; padding-bottom: 2em;">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg bfa-artist-card">
                         <img src="assets/img/mckenzie-duncan.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">McKenzie Duncan</h5>
                         <span>Dancer / Choreographer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#mckenziebio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-9" style="border-left: 2px solid #137868; padding-left: 2em;">
-                        <p>McKenzie Duncan is a dancer and choreographer from Knoxville, Tennessee. She spent the ages of 12-18 dancing with the pre-professional company, Go! Contemporary Dance Works in East Tennessee, which shaped her appreciation for innovative choreography and storytelling, ultimately sparking a desire to continue professionally. During this time, she supplemented her training at summer intensives with well-recognized companies such as the Nashville Ballet, Sarasota Ballet, Oklahoma City Ballet, and Texas Ballet Theatre.</p>
-                        <p>Immediately after graduating high school, she accepted a contract as a trainee and then as an Artist with Columbia Classical Ballet. Following this, she continued to broaden her professional experience, holding trainee positions with Ballet 5:8 and Tulsa Ballet, and an Apprenticeship with the Montgomery Ballet. During her time with these companies, she performed in many classical and neoclassical ballets, as well as works by sought-after contemporary choreographers such as Ma Cong and Jera Wolfe.</p>
-                        <p>Currently, she is an artist, teacher, and choreographer for Dramatic Truth Ballet Theatre in Kansas City, Missouri, where she participates in storytelling and ministry through dance. She believes and bases her works on the knowledge that the arts and creativity are gifts from God and can be used powerfully to bring people to Him.</p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="mckenziebio" tabindex="-1" aria-labelledby="mckenziebioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="mckenziebioLabel">Meet McKenzie Duncan</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>McKenzie Duncan is a dancer and choreographer from Knoxville, Tennessee. She spent the ages of 12-18 dancing with the pre-professional company, Go! Contemporary Dance Works in East Tennessee, which shaped her appreciation for innovative choreography and storytelling, ultimately sparking a desire to continue professionally. During this time, she supplemented her training at summer intensives with well-recognized companies such as the Nashville Ballet, Sarasota Ballet, Oklahoma City Ballet, and Texas Ballet Theatre.</p>
+                            <p>Immediately after graduating high school, she accepted a contract as a trainee and then as an Artist with Columbia Classical Ballet. Following this, she continued to broaden her professional experience, holding trainee positions with Ballet 5:8 and Tulsa Ballet, and an Apprenticeship with the Montgomery Ballet. During her time with these companies, she performed in many classical and neoclassical ballets, as well as works by sought-after contemporary choreographers such as Ma Cong and Jera Wolfe.</p>
+                            <p>Currently, she is an artist, teacher, and choreographer for Dramatic Truth Ballet Theatre in Kansas City, Missouri, where she participates in storytelling and ministry through dance. She believes and bases her works on the knowledge that the arts and creativity are gifts from God and can be used powerfully to bring people to Him.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
-                <br>
-                <div class="row" style="display: flex; align-items: center;">
-                    <div class="col-md-3" style="text-align: center; padding-bottom: 2em;">
+                    <div class="col-12 col-md-6 col-lg bfa-artist-card">
                         <img src="assets/img/margaret-fitz.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Margaret Fitz</h5>
                         <span>Dancer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#margaretbio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-9" style="border-left: 2px solid #137868; padding-left: 2em;">
-                        <p>Margaret Fitz, a Minnesota native, is a ballet dancer, teacher, and choreographer. She trained pre-professionally in high school, performing in works like <i>The Nutcracker</i> and <i>Coppelia</i>. She then joined the Conservatory at Ballet 5:8 in Chicago, completing their rigorous program in two years with honors and performing original works by Artistic Director Julianna Rubio Slager.</p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="margaretbio" tabindex="-1" aria-labelledby="margaretbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="margaretbioLabel">Meet Margaret Fitz</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Margaret Fitz, a Minnesota native, is a ballet dancer, teacher, and choreographer. She trained pre-professionally in high school, performing in works like <i>The Nutcracker</i> and <i>Coppelia</i>. She then joined the Conservatory at Ballet 5:8 in Chicago, completing their rigorous program in two years with honors and performing original works by Artistic Director Julianna Rubio Slager.</p>
                         <p>After graduating, Margaret became a Ballet 5:8 trainee, continuing her training under Slager and Brette Benedict. She excelled, performing the principal role in <i>Beyond The Nutcracker</i> and completing the program in one year. She then spent two seasons in Ballet 5:8's Second Company, performing in <i>BareFace</i>, <i>The Lost Women of Juarez</i>, and other productions.</p>
                         <p>In 2024, Margaret relocated to Kansas City, MO, to join Dramatic Truth Ballet Theatre as a company artist. She recently completed her first season with the company, where she had the opportunity to perform the principal role of Amber in <i>I Remember</i>. In addition to performing, Margaret teaches and choreographs for several pre-professional ballet schools and studios in the area. She was recently appointed Upper School Director at Dramatic Truth School of the Arts.</p>
                         <p>Margaret is passionate about the art of dance and is committed to bringing excellence to the stage. She is thrilled to have been invited to perform in "Beauty From Ashes" and wishes to thank everyone who made this event possible.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
-                <br>
-                <div class="row" style="display: flex; align-items: flex-start;">
-                    <div class="col-md-3" style="text-align: center; padding-bottom: 2em;">
-                        <img src="assets/img/katarina-larson.jpg" style="border-radius: 50%; width: 150px;">
+                    <div class="col-12 col-md-6 col-lg bfa-artist-card">
+                        <img src="assets/img/katrina-larson.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Katrina Larson</h5>
                         <span>Dancer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#katrinabio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-9" style="border-left: 2px solid #137868; padding-left: 2em;">
-                        <p>Katarina Larson holds a Bachelor of Science in Kinesiology with an emphasis in Dance Science from Texas A&M University and a Certificate of Dance from Storling Conservatory. She has performed with Arrows International, Storling Dance Theater, Maranatha Arts Collective, and Earthen Image Movement. She is honored to be a part of Beauty from Ashes, and she hopes to use dance as a blessing to all those present.</p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="katrinabio" tabindex="-1" aria-labelledby="katrinabioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="katrinabioLabel">Meet Katrina Larson</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Katarina Larson holds a Bachelor of Science in Kinesiology with an emphasis in Dance Science from Texas A&M University and a Certificate of Dance from Storling Conservatory. She has performed with Arrows International, Storling Dance Theater, Maranatha Arts Collective, and Earthen Image Movement. She is honored to be a part of Beauty from Ashes, and she hopes to use dance as a blessing to all those present.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
-                <br>
-                <div class="row" style="display: flex; align-items: flex-start;">
-                    <div class="col-md-3" style="text-align: center; padding-bottom: 2em;">
+                    <div class="col-12 col-md-6 col-lg bfa-artist-card">
                         <img src="assets/img/carys-kaatz.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Carys Kaatz</h5>
                         <span>Dancer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#carysbio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-9" style="border-left: 2px solid #137868; padding-left: 2em;">
-                        <p>Carys Kaatz began dancing in the UK at the age of 3 and was accepted into the Royal Ballet Associate program at age 9. Over the next few years she continued her training both with the Royal Ballet and also with the associate programs at Central School of Ballet and London Contemporary Dance school. At 16 Carys began her full time vocational training at Central School of Ballet in London. Since graduating. Carys has danced with many companies around England including Eliot Smith Dance Company, Balbir Shing Company and Springs Dance Company. Carys is a volunteer artist in residence with Dramatic Truth Ballet Theatre, and is currently studying towards her PHD in Biblical theology at Calvary University.</p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="carysbio" tabindex="-1" aria-labelledby="carysbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="carysbioLabel">Meet Carys Kaatz</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Carys Kaatz began dancing in the UK at the age of 3 and was accepted into the Royal Ballet Associate program at age 9. Over the next few years she continued her training both with the Royal Ballet and also with the associate programs at Central School of Ballet and London Contemporary Dance school. At 16 Carys began her full time vocational training at Central School of Ballet in London. Since graduating. Carys has danced with many companies around England including Eliot Smith Dance Company, Balbir Shing Company and Springs Dance Company. Carys is a volunteer artist in residence with Dramatic Truth Ballet Theatre, and is currently studying towards her PHD in Biblical theology at Calvary University.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
-                <br>
-                <div class="row" style="display: flex; align-items: flex-start;">
-                    <div class="col-md-3" style="text-align: center; padding-bottom: 2em;">
-                        <img src="assets/img/eleanor-johnson.jpg" style="border-radius: 50%; width: 150px;">
+                    <div class="col-12 col-md-6 col-lg bfa-artist-card">
+                        <img src="assets/img/Eleanor-Johnson.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Eleanor Johnson</h5>
                         <span>Dancer</span>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#eleanorbio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-9" style="border-left: 2px solid #137868; padding-left: 2em;">
-                        <p>Eleanor Johnson began her ballet training at the age of three years old in Costa Rica. She then moved to the U.S and trained at Dramatic Truth School of the Arts under Liz Dimmel and Laura Morton. She graduated in 2024 after having completed their program and after one year as an apprentice with Dramatic Truth. Eleanor is now entering her second year as a company member and is preparing for her third year as the lead role in Dramatic Truth's production of the Mystery of Christmas.</p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="eleanorbio" tabindex="-1" aria-labelledby="eleanorbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="eleanorbioLabel">Meet Eleanor Johnson</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Eleanor Johnson began her ballet training at the age of three years old in Costa Rica. She then moved to the U.S and trained at Dramatic Truth School of the Arts under Liz Dimmel and Laura Morton. She graduated in 2024 after having completed their program and after one year as an apprentice with Dramatic Truth. Eleanor is now entering her second year as a company member and is preparing for her third year as the lead role in Dramatic Truth's production of the Mystery of Christmas.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
