--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -376,6 +376,27 @@
                     <div class="col-md-3" style="text-align: center;">
                         <img src="assets/img/nicholas-cockrell.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Nicholas Cockrell</h5>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#nicholasbio">
+                          View Bio
+                        </a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="nicholasbio" tabindex="-1" aria-labelledby="nicholasbioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="nicholasbioLabel">Meet Nicholas Cockrell</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Beauty from Ashes comes at an uncanny time in my life. September in years' past have held my own struggles with suicide and suicidal ideations. My first experience considering suicide was sophomore year of college. Life seemed increasingly vain, short lived, and meaningless, especially if death was the end. Through these trenches of despair I learned the beauty of life by its brevity. Thus, there was a certain mercy that creeped into the foundation of my existence and life. Second, September of 2021 had me deconstructing false narratives and names I believed about myself. Being completely undone and unraveled, I was at the end of myself. Here God stepped in and rebuilt me according to who He says I am.</p>
+                            <p>Each time, art was an outlet to process and engage with these depths of darkness. And now I get to paint for this event; shining light, beauty, and hope that even the darkness succumbs to light and color.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
                 <br>
