--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -365,15 +365,35 @@
             <div class="col-md-12" style="padding-bottom: 2em;">
                 <h3>Live Painters & Auction of the Live Paintings</h3>
                 <p>
-                    During both the Classical and Jazz music parts of the evening, two local artists, Leanne Thomas and Nicholas Cockrell, will be painting live.
+                    During both Classical and Jazz segments, Leanne Thomas and Nicholas Cockrell will live paint, drawing from journeys of healing and resilience. Leanne's work explores the redemptive and healing potential of creativity. Nicholas draws from his own battles with suicide and the renewal he experienced through God, using his art to shine light, beauty, and hope - proving that even the darkness succumbs to light and color. Their live art invites us to witness how art and faith can transform suffering and loss into stories of resilience and hope.
                 </p>
                 <br>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: center;">
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/leanne-thomas.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Leanne Thomas</h5>
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#leannebio">
+                          View Bio
+                        </a>
                     </div>
-                    <div class="col-md-3" style="text-align: center;">
+                    <!-- Modal -->
+                    <div class="modal fade" id="leannebio" tabindex="-1" aria-labelledby="leannebioLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="leannebioLabel">Meet Leanne Thomas</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Leanne Thomas is a full-time mother to three boys, a passionate art teacher, and a practicing artist. She is honored to join Transformance Arts as both an exhibiting artist and live painter for the event Beauty From Ashes. Her work for this show explores the redemptive and healing potential of creativity - how beauty often emerges through struggle, surrender, and transformation. She is excited to partner with artists from all genres and share stories of hope and survival.</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/nicholas-cockrell.jpg" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Nicholas Cockrell</h5>
                         <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#nicholasbio">
